# ObjGTKGen

./: .gitignore  AUTHORS  Makefile  Manual_library_fixes.md  README.md  configure.ac  gir2objc.sublime-project  objgtkgen.sublime-project  org.codeberg.objgtk.gir2objc.yml  org.codeberg.objgtk.objgtkgen.yml
BaseClasses/Gtk-3.0/: OGTKBaseBuilder.m  OGTKDialog+OGTKAddButton.h  OGTKDialog+OGTKAddButton.m  OGTKMessageDialog+OGTKWithMarkup.h
BaseClasses/ObjGTK3/: OGTKFileChooserDialog+OGTKButtonTextResponseDictionary.h
Config/: global_conf.json  library_conf.json  license.txt
LibrarySourceAdditions/: README.md
LibrarySourceAdditions/Gtk-3.0/: OGTK.h  OGTK.m  OGTKBaseBuilder.h  OGTKBaseBuilder.m  OGTKCallbackData.h  OGTKCallbackData.m  OGTKContainer+OGTKAddWidget.h  OGTKContainer+OGTKAddWidget.m  OGTKDialog+OGTKAddButton.h  OGTKDialog+OGTKAddButton.m  OGTKFileChooserDialog+OGTKButtonTextResponseDictionary.h  OGTKFileChooserDialog+OGTKButtonTextResponseDictionary.m  OGTKInfoBar+OGTKAddButtonTextResponseDictionary.h  OGTKInfoBar+OGTKAddButtonTextResponseDictionary.m  OGTKMessageDialog+OGTKWithMarkup.h  OGTKMessageDialog+OGTKWithMarkup.m  OGTKRecentChooserDialog+OGTKButtonTextResponseDictionary.h  OGTKRecentChooserDialog+OGTKButtonTextResponseDictionary.m  OGTKSignalConnector.h  OGTKSignalConnector.m  OGTKSignalData.h  OGTKSignalData.m  OGTKTypeWrapper.h  OGTKTypeWrapper.m
Resources/BuildObjGTK/: Makefile  ObjGTK.oc.in  configure.ac
Resources/BuildObjGTK/src/: Makefile
Resources/BuildTemplate/: Makefile  Template.oc.in  configure.ac  extra.mk.in
Resources/BuildTemplate/src/: Info.plist.in  Makefile
Resources/ExampleApp/: Makefile
Resources/TemplateSnippets/: acargwith.tmpl  acocchecking.tmpl  pkgcheckmodules.tmpl
src/: .clang-format  CoreGTKGen.m  Gir2Objc.h  Gir2Objc.m  Gir2ObjcApplication.m  Makefile  ObjGTKGen.m  compile_flags.txt  main.m  makefile
src/BaseClasses/: CGTK.h  CGTK.m  CGTKBase.h  CGTKBase.m  CGTKBaseBuilder.h  CGTKBaseBuilder.m  CGTKCallbackData.h  CGTKCallbackData.m  CGTKSignalConnector.h  CGTKSignalConnector.m  CGTKSignalData.h  CGTKSignalData.m  CGTKTypeWrapper.h  CGTKTypeWrapper.m  OGObject.m  OGTK.h  OGTK.m  OGTKBase.h  OGTKBase.m  OGTKBaseBuilder.h  OGTKBaseBuilder.m  OGTKCallbackData.h  OGTKCallbackData.m  OGTKContainer+OGTKAddWidget.h  OGTKContainer+OGTKAddWidget.m  OGTKDialog+OGTKAddButton.h  OGTKDialog+OGTKAddButton.m  OGTKFileChooserDialog+OGTKButtonTextResponseDictionary.h  OGTKFileChooserDialog+OGTKButtonTextResponseDictionary.m  OGTKGObjectInitializationFailedException.h  OGTKGObjectInitializationFailedException.m  OGTKInfoBar+OGTKAddButtonTextResponseDictionary.h  OGTKInfoBar+OGTKAddButtonTextResponseDictionary.m  OGTKMessageDialog+OGTKWithMarkup.h  OGTKMessageDialog+OGTKWithMarkup.m  OGTKObject.h  OGTKObject.m  OGTKRecentChooserDialog+OGTKButtonTextResponseDictionary.h  OGTKRecentChooserDialog+OGTKButtonTextResponseDictionary.m  OGTKSignalConnector.h  (+6 more)
src/BaseClasses/General/: OGObject.h  OGObject.m  OGObjectInitializationFailedException.h  OGObjectInitializationFailedException.m
src/BaseClasses/ObjGTK3/: OGTK.h  OGTK.m  OGTKBaseBuilder.h  OGTKCallbackData.m  OGTKContainer+OGTKAddWidget.h  OGTKDialog+OGTKAddButton.h  OGTKDialog+OGTKAddButton.m  OGTKFileChooserDialog+OGTKButtonTextResponseDictionary.m  OGTKGObjectInitializationFailedException.h  OGTKGObjectInitializationFailedException.m  OGTKInfoBar+OGTKAddButtonTextResponseDictionary.m  OGTKMessageDialog+OGTKWithMarkup.m  OGTKRecentChooserDialog+OGTKButtonTextResponseDictionary.m  OGTKSignalData.m  OGTKTypeWrapper.h
src/Config/: convert_type.json  convert_type.map  dont_swap_types.json  extra_imports.json  extra_methods.json  extra_methods.map  global_conf.json  library_conf.json  license.txt  swap_types.json  swap_types.map
src/Exceptions/: Makefile  OGTKDataProcessingNotImplementedException.h  OGTKDataProcessingNotImplementedException.m  OGTKGIRNoPackageException.h  OGTKGIRNoPackageException.m  OGTKIncorrectConfigException.h  OGTKIncorrectConfigException.m  OGTKLibraryAlreadyLoadedException.h  OGTKLibraryAlreadyLoadedException.m  OGTKNamespaceContainsNoClassesException.h  OGTKNamespaceContainsNoClassesException.m  OGTKNoGIRAPIException.h  OGTKNoGIRAPIException.m  OGTKNoGIRDictException.h  OGTKNoGIRDictException.m  OGTKReceivedNilExpectedStringException.h  OGTKReceivedNilExpectedStringException.m
src/GIR/: GIRAPI.h  GIRAPI.m  GIRApi.h  GIRApi.m  GIRArray.h  GIRArray.m  GIRBase.h  GIRBase.m  GIRClass.h  GIRClass.m  GIRConstant.h  GIRConstant.m  GIRConstructor.h  GIRConstructor.m  GIRDoc.h  GIRDoc.m  GIREnumeration.h  GIREnumeration.m  GIRField.h  GIRField.m  GIRFunction.h  GIRFunction.m  GIRImplements.h  GIRImplements.m  GIRInclude.h  GIRInclude.m  GIRInterface.h  GIRInterface.m  GIRMember.h  GIRMember.m  GIRMethod.h  GIRMethod.m  GIRMethodMapping.h  GIRNamespace.h  GIRNamespace.m  GIRParameter.h  GIRParameter.m  GIRPrerequisite.h  GIRPrerequisite.m  GIRProperty.h  (+10 more)
src/Generator/: CGTKClass.h  CGTKClass.m  CGTKClassWriter.h  CGTKClassWriter.m  CGTKMethod.h  CGTKMethod.m  CGTKParameter.h  CGTKParameter.m  CGTKUtil.h  CGTKUtil.m  Makefile  OFDictionary+JsonContentsOfFile.h  OFDictionary+JsonContentsOfFile.m  OFDictionary+OGTKJsonDictionaryOfFile.h  OFDictionary+OGTKJsonDictionaryOfFile.m  OGTKClass.h  OGTKClass.m  OGTKClassWriter.h  OGTKClassWriter.m  OGTKFileOperation.h  OGTKFileOperation.m  OGTKLibrary.h  OGTKLibrary.m  OGTKLibraryWriter.h  OGTKLibraryWriter.m  OGTKMapper.h  OGTKMapper.m  OGTKMethod.h  OGTKMethod.m  OGTKPackage.h  OGTKPackage.m  OGTKParameter.h  OGTKParameter.m  OGTKTemplate.h  OGTKTemplate.m  OGTKUtil.h  OGTKUtil.m
src/Output/: HelloWorld.m  main.m  makefile
src/Resources/BuildObjGTK/: extra.mk.in
src/Resources/BuildObjGTK/src/: Makefile
src/Resources/BuildTemplate/: ObjGTK.oc.in  Template.oc.in  configure.ac
src/Resources/BuildTemplate/src/: Makefile
src/Resources/ExampleApp/: HelloWorld.m  Makefile
src/Resources/TemplateSnippets/: pkgcheckmodules.tmpl
src/XMLReader/: Makefile  XMLReader.h  XMLReader.m
